# Badge-Generation

./: .gitignore  LICENSE  README.md  README_EN.md  pyproject.toml
fonts/: README.md
src/badgegen/: __init__.py  cli.py  core.py
src/badgegen.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/badgegen/layouts/: a4_2x2.yaml
tests/: test_smoke.py
